Fix wrapping issue for filters on upcoming page.

--- a/src/components/Pages/UpcomingPage/UpcomingPage.scss
+++ b/src/components/Pages/UpcomingPage/UpcomingPage.scss
@@ -12,13 +12,18 @@
 			display: flex;
 			flex-direction: row;
 			margin-bottom: 10px;
+			flex-wrap: wrap-reverse;
+			justify-content: space-between;
+			width: 100%;
+			margin-top: -10px;
 
 			.pos-filter-wrapper {
 				display: flex;
-				width: 80%;
+				width: fit-content;
 				max-width: 1100px;
 				justify-content: left;
 				align-items: center;
+				margin-top: 10px;
 
 				.filter-btn, .filter-btn-active {
 					width: 50px;
@@ -33,6 +38,7 @@
 				justify-content: center;
 				height: fit-content;
 				border-radius: 3px;
+				margin-top: 10px;
 
 				.search-input {
 					font-size: 11pt;
